--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-firestore:24.1.1'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -67,10 +69,15 @@ dependencies {
 
     // FirebaseUI for Firebase Auth
     implementation "com.google.firebase:firebase-auth:9.6.1"
+    implementation 'com.google.firebase:firebase-firestore:23.0.1'
 
 
     // FirebaseUI for Cloud Storage
     implementation 'com.google.firebase:firebase-database:9.6.1'
+
+    implementation "androidx.recyclerview:recyclerview:1.3.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 
 
 
