--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,15 @@
         android:theme="@style/Theme.EasyMeal"
         tools:targetApi="31">
         <activity
-            android:name=".UserAdress"
+            android:name=".Tiffin_detail"
+            android:exported="false" />
+        <activity
+            android:name=".Home"
             android:exported="false" />
         <activity
             android:name=".splashscreen"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,6 +39,7 @@
         <activity
             android:name=".UserDetail"
             android:exported="false" />
+
         <activity
             android:name=".SignUp"
             android:exported="false" />
