--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,14 @@ dependencies {
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 
+    // cardview dependency
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.squareup.picasso:picasso:2.8'
+
+    //CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 
 
