--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.EasyMeal"
         tools:targetApi="31">
         <activity
+            android:name=".CurrentAddress"
+            android:exported="false" />
+        <activity
             android:name=".Tiffin_detail"
             android:exported="false" />
         <activity
@@ -52,6 +55,9 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CheckoutActivity"
             android:exported="false" />
     </application>
 
